@@ -1,10 +1,10 @@
 /*******************************************************************************
  * Copyright (c) 2013, 2015 Tasktop Technologies and others.
- * 
+ *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
  * https://www.eclipse.org/legal/epl-2.0
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -15,8 +15,7 @@ package org.eclipse.mylyn.tasks.tests.core;
 
 import java.util.HashMap;
 import java.util.Map;
-
-import junit.framework.TestCase;
+import java.util.Set;
 
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.mylyn.commons.ui.CommonImages;
@@ -37,7 +36,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableSet;
+import junit.framework.TestCase;
 
 public class RepositoryConnectorContributorTest extends TestCase {
 
@@ -125,7 +124,7 @@ public class RepositoryConnectorContributorTest extends TestCase {
 
 	@Test
 	public void testGetBrands() throws Exception {
-		assertEquals(ImmutableSet.of("org.mylyn", "org.eclipse"), manager.getBrands(connector.getConnectorKind()));
+		assertEquals(Set.of("org.mylyn", "org.eclipse"), manager.getBrands(connector.getConnectorKind()));
 	}
 
 	@Test
