@@ -1,10 +1,10 @@
 /*******************************************************************************
  * Copyright (c) 2011, 2015 Tasktop Technologies.
- * 
+ *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
  * https://www.eclipse.org/legal/epl-2.0
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -13,7 +13,7 @@
 
 package org.eclipse.mylyn.tasks.tests.ui;
 
-import junit.framework.TestCase;
+import java.util.List;
 
 import org.eclipse.jface.dialogs.Dialog;
 import org.eclipse.mylyn.commons.notifications.feed.ServiceMessageEvent;
@@ -25,7 +25,7 @@ import org.eclipse.mylyn.internal.tasks.ui.TasksUiPlugin;
 import org.eclipse.mylyn.internal.tasks.ui.notifications.TaskListServiceMessageControl;
 import org.eclipse.swt.widgets.Composite;
 
-import com.google.common.collect.ImmutableList;
+import junit.framework.TestCase;
 
 /**
  * @author Steffen Pingel
@@ -110,6 +110,6 @@ public class TaskListServiceMessageControlTest extends TestCase {
 		message.setImage(Dialog.DLG_IMG_HELP);
 		message.setId(id);
 		control.handleEvent(new ServiceMessageEvent(TasksUiPlugin.getDefault().getServiceMessageManager(),
-				Kind.MESSAGE_UPDATE, ImmutableList.of(message)));
+				Kind.MESSAGE_UPDATE, List.of(message)));
 	}
 }
